--- a/CH/info.html
+++ b/CH/info.html
@@ -50,6 +50,10 @@
 			<td><a href="CP3.html" target="_blank">CP3.html</a></td>
 		</tr>
 		<tr>
+			<td class="active">2020 0604 新增圖文欄位</td>
+			<td><a href="CP4.html" target="_blank">CP4.html</a></td>
+		</tr>
+		<tr>
 			<th>NP頁</th>
 			<th></th>
 		</tr>
